@@ -78,7 +78,6 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 /**
  * Class that maintains a map of {@link DsonOutput.Output} types to a set of pairs of classes and
@@ -238,7 +237,7 @@ public abstract class ClassScanningSerializationPolicy implements SerializationP
             .map(Map.Entry::getKey)
             .map(Class::getName)
             .sorted()
-            .collect(Collectors.toList());
+            .toList();
     if (!classesWithMissingSerializer.isEmpty()) {
       throw new IllegalStateException(
           String.format(
